cmake_minimum_required(VERSION 3.26)
project(cpp_labs )

set(CMAKE_CXX_STANDARD 17)

add_executable(lab-1 lab-1.cpp)
add_executable(lab-2 lab-2.cpp)
add_executable(lab-3 lab-3.cpp)
add_executable(lab-4 lab-4.cpp)
add_executable(lab-5 lab-5.cpp)
add_executable(lab-6 lab-6.cpp)
add_executable(lab-7 lab-7.cpp)