cmake_minimum_required(VERSION 3.26)
project(cpp_labs )

set(CMAKE_CXX_STANDARD 17)

add_executable(lab-1 lab-1.cpp)
add_executable(lab-2 lab-2.cpp)
add_executable(lab-3 lab-3.cpp)
add_executable(lab-4 lab-4.cpp)
add_executable(lab-5 lab-5.cpp)
add_executable(lab-9 lab-9.cpp)
add_executable(lab-10 lab-10.cpp)
add_executable(lab-11 lab-11.cpp)
add_executable(lab-12 lab-12.cpp)
add_executable(lab-13 lab-13.cpp)