cmake_minimum_required(VERSION 3.26)
project(cpp-duikt)

set(CMAKE_CXX_STANDARD 17)

#1st semester
add_executable(lab-1.1 cpp-duikt-1st-sem/lab-1.cpp)
add_executable(lab-2.1 cpp-duikt-1st-sem/lab-2.cpp)
add_executable(lab-3.1 cpp-duikt-1st-sem/lab-3.cpp)
add_executable(lab-4.1 cpp-duikt-1st-sem/lab-4.cpp)
add_executable(lab-5.1 cpp-duikt-1st-sem/lab-5.cpp)
add_executable(lab-9.1 cpp-duikt-1st-sem/lab-9.cpp)

#2nd semester
add_executable(lab-1.2 cpp-duikt-2nd-sem/lab-1.cpp)
add_executable(lab-2.2 cpp-duikt-2nd-sem/lab-2.cpp)
add_executable(lab-3.2 cpp-duikt-2nd-sem/lab-3.cpp)
add_executable(lab-4.2 cpp-duikt-2nd-sem/lab-4.cpp)
add_executable(lab-5.2 cpp-duikt-2nd-sem/lab-5.cpp)
add_executable(lab-6.2 cpp-duikt-2nd-sem/lab-6.cpp)
add_executable(lab-7.2 cpp-duikt-2nd-sem/lab-7.cpp)
add_executable(lab-8.2 cpp-duikt-2nd-sem/lab-8.cpp)
